--- a/src/Elements/styles/Statement.scss
+++ b/src/Elements/styles/Statement.scss
@@ -23,16 +23,17 @@
         display: flex;
     }
     > .buttons {
+        z-index: 9999 !important;
         display: none;
-        &::before{
+        &::before {
             content: " ";
             position: absolute;
-            width: .5em;
-            height: .5em;
-            border-radius: .5em;
+            width: 0.5em;
+            height: 0.5em;
+            border-radius: 0.5em;
             background: rgb(255, 0, 0);
-            left:-.725em;
-            top:.125em;
+            left: -0.725em;
+            top: 0.125em;
         }
         border: $border;
         font-weight: bold;
@@ -69,12 +70,21 @@
     > .content {
         display: grid;
     }
-    &.start > .content ,&.normal > .content{
-        grid-template-columns: 1fr;
+    &.start,
+    &.normal {
+        .main {
+            border-block-end: $border;
+            border-inline-end: $border;
+            padding-inline: 1ch;
+        }
+        .content {
+            grid-template-columns: 1fr;
+        }
     }
     &.if {
         > .main {
             border-block-end: $border;
+            border-inline-end: $border;
             padding-inline: 3ch;
             padding-block-start: 0.5em;
             padding-block-end: 0.275em;
@@ -105,5 +115,8 @@
         > .content {
             grid-template-columns: 1fr 1fr;
         }
+    }
+    &:last-child{
+        background: aquamarine;
     }
 }
