Further Improved style + refactor (mixins)

--- a/src/Elements/styles/_mixins.scss
+++ b/src/Elements/styles/_mixins.scss
@@ -4,7 +4,29 @@
     background-origin: padding-box;
 }
 
-@mixin render_pseudo{
-    content:" ";
+@mixin render_pseudo($content: " "){
+    content:$content;
     position: absolute;
+}
+
+@mixin if_indicator_false($content: " "){
+    @include render_pseudo($content);
+    @include icon_background(calc(100% - $border_width * 3));
+    background-image: $icon_diagonal_line;
+    top: math.div(-$border_width, 2);
+    height: calc(100% + $border_width);
+    padding-block-start: .925em;
+    padding-inline-end: .5ch;
+    display: block;
+    width: 3.5ch;
+    text-align: right;
+    right: 0%;
+    left: unset;
+}
+
+@mixin if_indicator_true($content:" "){
+    @include if_indicator_false($content);
+    transform: scaleX(-1);
+    left: 0%;
+    right: unset;
 }
