--- a/src/Elements/styles/Statement.scss
+++ b/src/Elements/styles/Statement.scss
@@ -39,16 +39,19 @@
             height: 0.475em;
             border-radius: 0.5em;
             background: rgb(255, 0, 0);
-            left: -0.725em;
-            top: 0.125em;
+            left: -0.655em;
+            top: 0.025em;
         }
         &::after{
+            @include render_pseudo;
+            @include icon_background(.775em);
             z-index: 11 !important;
             background-image: $icon_arrow_up;
-            @include icon_background(.775em);
-            @include render_pseudo;
             height: .775em;
             width: .775em;
+            margin-inline-start: -.675em;
+            margin-block-start: .265em;
+            transform: rotate(-90deg);
         }
         border: $border;
         font-weight: bold;
@@ -106,33 +109,10 @@
             padding-inline: 3.2ch;
             position: relative;
             &::before {
-                @include render_pseudo;
-                content: "I";
-                @include icon_background(calc(100% - $border_width * 3));
-                padding-block-start: .925em;
-                text-align: right;
-                padding-inline-end: .5ch;
-                display: block;
-                background-image: $icon_diagonal_line;
-                height: calc(100% + $border_width);
-                width: 3.5ch;
-                transform: scaleX(-1);
-                top: math.div(-$border_width, 2);
-                left: 0%;
+                @include if_indicator_true("I");
             }
             &::after {
-                @include render_pseudo;
-                content: "H";
-                @include icon_background(calc(100% - $border_width * 3));
-                display: block;
-                background-image: $icon_diagonal_line;
-                height: calc(100% + $border_width);
-                width: 3.5ch;
-                padding-block-start: .925em;
-                text-align: right;
-                padding-inline-end: .5ch;
-                top: math.div(-$border_width, 2);
-                right: 0%;
+                @include if_indicator_false("H");
             }
         }
         > .content {
