--- a/src/Elements/styles/_mixins.scss
+++ b/src/Elements/styles/_mixins.scss
@@ -1,22 +1,23 @@
-@mixin icon_background($width, $height:$width){
+@mixin icon_background($width, $height: $width) {
     background-repeat: no-repeat;
     background-size: $width;
     background-origin: padding-box;
 }
 
-@mixin render_pseudo($content: " "){
-    content:$content;
+@mixin render_pseudo($content: " ") {
+    content: $content;
     position: absolute;
 }
 
-@mixin if_indicator_false($content: " "){
+@mixin if_indicator_false($content: " ") {
     @include render_pseudo($content);
-    @include icon_background(calc(100% - $border_width * 3));
+    @include icon_background(calc(100% - $border_width * 3 + .075em));
     background-image: $icon_diagonal_line;
     top: math.div(-$border_width, 2);
     height: calc(100% + $border_width);
-    padding-block-start: .925em;
-    padding-inline-end: .5ch;
+    margin-block-start: -.025em;
+    padding-block-start: 0.925em;
+    padding-inline-end: 0.5ch;
     display: block;
     width: 3.5ch;
     text-align: right;
@@ -24,9 +25,23 @@
     left: unset;
 }
 
-@mixin if_indicator_true($content:" "){
+
+svg.image-indicator-stroke{
+    path{
+        stroke:$color_statement_border;
+        stroke-width:1.5 ;
+    }
+}
+
+@mixin if_indicator_true($content: " ") {
     @include if_indicator_false($content);
     transform: scaleX(-1);
     left: 0%;
     right: unset;
+}
+
+@mixin background_mask($bg, $img, $width: 100%, $height: 100%) {
+    background-color: $bg;
+    -webkit-mask: $img no-repeat $width $height;
+    mask: $img no-repeat $width $height;
 }
