--- a/src/Elements/styles/Structogram.scss
+++ b/src/Elements/styles/Structogram.scss
@@ -4,5 +4,5 @@
     margin-inline: auto;
     width: fit-content;
     border-inline-start: $border;
-    border-block-start: $border;
+    border-block: $border;
 }
