--- a/src/Elements/styles/statements/if.scss
+++ b/src/Elements/styles/statements/if.scss
@@ -3,14 +3,15 @@
 
 @mixin if_indicator_false($content: " ") {
     @include render_pseudo($content);
-    @include icon_background(calc(100% - $border_width * 3 + .075em));
+    @include icon_background(calc(100% - $border_width * 3 + 0.075em));
     background-image: $icon_diagonal_line;
     top: math.div(-$border_width, 2);
-    margin-block-start: -.025em;
+    height: calc(100% + $border_width);
+    margin-block-start: -0.025em;
     padding-block-start: 0.925em;
     padding-inline-end: 0.5ch;
     display: block;
-    width:3.5ch;
+    width: 3.5ch;
     text-align: right;
     right: 0%;
     left: unset;
@@ -23,7 +24,7 @@
     right: unset;
 }
 
-@mixin statement_if{
+@mixin statement_if {
     position: relative;
     display: grid;
     > .main {
@@ -38,50 +39,39 @@
             @include if_indicator_false("H");
         }
     }
-    > .content {
+    > .sub-content {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: repeat(2,minmax(1.750em, auto));
-        grid-template-areas:      
-            'true      false' 
-            'otherwise otherwise';
-        > :first-child{
+        grid-template-rows: 1fr;
+        grid-template-areas: "true      false";
+        > :first-child {
             grid-area: true;
         }
-        > :nth-child(2){
+        > :nth-child(2) {
             grid-area: false;
-        }
-        > :last-child{
-            grid-area: otherwise;
         }
     }
 }
 
-@mixin statement_switch{
-    &> .main{
+@mixin statement_switch {
+    & > .main {
         display: none;
     }
-    &> .content{
-        display: grid;
-        grid-template-rows: 1fr 1fr;
-        grid-template-columns: 1fr;
-        grid-auto-columns: 1fr;
-        grid-auto-flow:column;
+    & > .sub-content {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: no-wrap;
         //TODO place every element in the first row in order, except the last child, which will be actually the statement after it(and also below it)
-        &> {
-            &> .switch-if >.main::before{
-                @include if_indicator_true;
-            }
-            &> .switch-else >.main::before{
-                @include if_indicator_true;
-            }
-            grid-row-start: 1;
-            grid-row-end: 1;
+        & > .switch-if > .main::before {
+            @include if_indicator_true;
         }
-        > :last-child{
-            grid-row: 2;
-            grid-column-start: 1;
-            grid-column-end: -1;
+        & > .switch-else > .main {
+            color: transparent;
+            user-select: none;
+            &::before {
+                color: $color_statement_text;
+                @include if_indicator_false("H");
+            }
         }
     }
 }
