--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: $color_page_bg;
-  overflow: hidden; // TEMPORARY
+  overflow-x: hidden; // TEMPORARY
 }
 
 code {
