--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
-@import "Elements/styles/variables";
+@import "./styles/variables";
 body {
   margin: 0;
+  font-size: 28px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
