--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -13,6 +13,7 @@ $icon_diagonal_line: url("/icons/diagonal_line.svg");
     --color-s-button-bg-hover: rgb(243, 207, 164);
     --color-s-button-text: black;
     --color-s-btn-holder-bg:rgb(25, 25, 25);
+    --font-structogram:"Courier New", Courier, monospace;
 }
 
 //TODO, az elágazás indikátor nem vált színt, mert az SVG csak háttérképként és nem DOM-elemként van jelen
@@ -39,3 +40,5 @@ $color_s_button_bg : var(--color-s-button-bg);
 $color_s_button_bg_hover : var(--color-s-button-bg-hover);
 $color_s_button_text : var(--color-s-button-text);
 $color_s_btn_holder_bg : var(--color-s-btn-holder-bg);
+
+$font_structogram: var(--font-structogram);
