--- a/src/styles/Structogram.scss
+++ b/src/styles/Structogram.scss
@@ -8,18 +8,30 @@
     font-family: $font_structogram;
     color: white;
     > .content {
-        border-inline-start: $border;
+        border-inline: $border;
         border-block-start: $border;
         margin-inline: auto;
         width: fit-content;
     }
     &.with-signature > .structogram-signature {
+        margin-inline: auto;
+        position: relative;
         background: $color_statement_bg;
         color: white;
         border: $border;
         border-radius: 1em;
         padding-inline: 1em;
+        padding-block:.125em;
         margin-block-end: 0.825em;
+        width: max-content;
+        &::before{
+            top:1.415em;
+            left: 50%;
+            position: absolute;
+            content: " ";
+            height: 1em;
+            border-left: $border_width solid $color_statement_border;
+        }
     }
     .statement-start,
     .statement-end {
