--- a/src/styles/Structogram.scss
+++ b/src/styles/Structogram.scss
@@ -4,7 +4,7 @@
     margin-block-start: 1.225em;
     margin-block-end: 1em;
     margin-inline: auto;
-    width: fit-content;
+    width: auto;
     font-family: $font_structogram;
     color: white;
     > .content {
